tests/snapshots/snapshots__search_bar_inactive.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Search ──────────────────────────────┐
│                                      │
└──────────────────────────────────────┘
