tests/snapshots/snapshots__slice_picker_4d.snap
---
source: tests/snapshots.rs
assertion_line: 196
expression: buffer_to_string(&buf)
---






  ┌ Slice: temperature → heatmap ────────────────────────┐
  │Dim          Size   Role     Index                    │
  │time         12     Fixed    0                        │
  │level        10     Fixed    0                        │
  │lat          180    Y-axis   -                        │
  │lon          360    X-axis   -                        │
  │                                                      │
  │                                                      │
  └──────────────────────────────────────────────────────┘
   x/y/f  1 line 2 map  h/l idx  Enter  Esc
