tests/snapshots/snapshots__stats_panel_basic.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Stats: temperature ────────┐
│Count   100                 │
│Valid   100 (100.0%)        │
│NaN     0                   │
│Inf     0                   │
│───────────────             │
│Min     0.0000              │
│p5      4.9500              │
│p25     24.7500             │
│Median  49.5000             │
│p75     74.2500             │
│p95     94.0500             │
│Max     99.0000             │
│───────────────             │
│Mean    49.5000             │
│Std Dev 29.0115             │
│                            │
│                            │
│                            │
└────────────────────────────┘
