tests/snapshots/snapshots__stats_panel_empty.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Stats ─────────────────────┐
│Select a variable           │
│                            │
│                            │
│                            │
└────────────────────────────┘
