tests/snapshots/snapshots__stats_panel_with_nan.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Stats: pressure ───────────┐
│Count   60                  │
│Valid   50 (83.3%)          │
│NaN     10                  │
│Inf     0                   │
│───────────────             │
│Min     0.0000              │
│p5      2.4500              │
│p25     12.2500             │
│Median  24.5000             │
│p75     36.7500             │
│p95     46.5500             │
│Max     49.0000             │
│───────────────             │
│Mean    24.5000             │
│Std Dev 14.5774             │
│                            │
│                            │
│                            │
└────────────────────────────┘
