tests/snapshots/snapshots__table_preview_1d.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Table: lat [lat] ────────────────────┐
│Idx        Value                      │
│0          10                         │
│1          20.5000                    │
│2          30                         │
│3          NaN                        │
│4          50                         │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Row 1-5/5 Col 1-1/1 | ↑↓←→ sc…        │
└──────────────────────────────────────┘
