tests/snapshots/snapshots__table_preview_2d.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Table: sst [lat × lon] ──────────────────────────────────┐
│Idx        0            1            2                    │
│0          1            2            3                    │
│1          4            5            6                    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│Row 1-2/2 Col 1-3/3 | ↑↓←→ scroll  Esc close              │
└──────────────────────────────────────────────────────────┘
