tests/snapshots/snapshots__table_preview_with_coords.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Table: temperature [lat] ────────────┐
│Idx        Value                      │
│-90        100                        │
│0          200                        │
│90         300                        │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│Row 1-3/3 Col 1-1/1 | ↑↓←→ sc…        │
└──────────────────────────────────────┘
