tests/snapshots/snapshots__tree_both_expanded.snap
---
source: tests/snapshots.rs
expression: buffer_to_string(&buf)
---
┌ Variables ───────────────────────────┐
│  ▼ atmosphere                        │
│      temperature                     │
│      pressure                        │
│    ◆ lat                             │
│› ▼ ocean                             │
│      salinity                        │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
